[package]
name = "async_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*"}
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.*"
env_logger = "0.10.*"
reqwest = "0.11.*"